Fix(index.hbs): add handlebars to educationItem.area so it renders

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -119,9 +119,7 @@
         <p class="degree-info">
           {{educationItem.studyType }}
             {{#if educationItem.area}}
-              educationItem.area
-            {{else}}
-              ''
+              {{educationItem.area}}
             {{/if}}
         </p>
         <p class="institution-date">
