--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -2,9 +2,22 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
 <title>
   {{ siteName }}
 </title>
+
+<!-- SEO -->
+<!-- Standard -->
+<meta name="description" content="{{ basics.about }}">
+<meta name="keyword" content="{{basics.keywords}}">
+
+<!-- Open Graph -->
+<meta property="og:title" content="{{ siteName }}">
+<!-- <meta property="og:image" content="https://example.com/images/image.jpg"> -->
+<meta property="og:description" content="{{ basics.about }}">
+<meta property="og:url" content="https://simplenotsimpler.com">
+<meta name="twitter:card" content="summary_large_image">
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
