feat: SEO optimization part 2: add og:image link

--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -14,7 +14,7 @@
 
 <!-- Open Graph -->
 <meta property="og:title" content="{{ siteName }}">
-<!-- <meta property="og:image" content="https://example.com/images/image.jpg"> -->
+<meta property="og:image" content="/img/simplenotsimpler-screenshot.png">
 <meta property="og:description" content="{{ basics.about }}">
 <meta property="og:url" content="https://simplenotsimpler.com">
 <meta name="twitter:card" content="summary_large_image">
