Feature: autolinker - implement URLs in work experience descriptions

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -102,9 +102,9 @@
         <ul class="combined-highlights">
           {{#each workItem.combinedHighlights as | highlight| }}
             <li class="highlight-item">
-              {{ highlight }}
+              {{{ addUri highlight }}}
             </li>
-            {{/each}} 
+          {{/each}} 
         </ul>
       </section>
     {{/each}}    
