Fix(security): add noreferrer noopener to external links

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -37,11 +37,11 @@
     
         <footer class="card-footer bg-transparent text-center">
     
-          <a href="{{ repo.url }}" target="_blank" class="link">
+          <a href="{{ repo.url }}" target="_blank" rel="noreferrer noopener" class="link">
             <i class="fas fa-fw fa-code-branch"></i><span class="link-text">GitHub</span></a>
 
           {{#if repo.homepageUrl }}
-          <a href="{{ repo.homepageUrl }}" target="_blank" class="link">
+          <a href="{{ repo.homepageUrl }}" target="_blank" rel="noreferrer noopener" class="link">
             <i class="fas fa-fw fa-globe"></i><span class="link-text">Demo</span>
           </a>
           {{/if}} 
