--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -46,20 +46,20 @@
       <li>
         <a href="#projects">
           <i class="nav-icon fas fa-fw fa-code-branch"></i>
-          <span class="navtext">Projects</span>
+          <span class="nav-text">Projects</span>
         </a>
       </li>
       <li>
         <a href="#skills">
           <i class="nav-icon fas fa-fw fa-tools"></i>
-          <span class="navtext">Skills</span>
+          <span class="nav-text">Skills</span>
         </a>
       </li>
       <li>
         <!-- NOTE: if get too much spam, enhance with a contact form w/ captcha or use a domain email address where server has better filtering -->
         <a href="mailto:{{ basics.email }}">
           <i class="nav-icon fas fa-fw fa-fw fa-envelope"></i>
-          <span class="navtext">Contact</span>
+          <span class="nav-text">Contact</span>
         </a>
       </li>
       <!-- LinkedIn profile is public, but LinkedIn detects IP and requires login so it can force recruiters to sign in. --> 
@@ -67,7 +67,7 @@
         <li>        
             <a href="{{ profile.url }}" target="_blank" rel="noreferrer noopener">
               <i class="nav-icon fab fa-fw fa-{{toLowerCaseHbs profile.network }} "></i>
-              <span class="navtext">{{ profile.network}}</span>
+              <span class="nav-text">{{ profile.network}}</span>
             </a>
         </li>
       {{/each}}
