remove header spacing

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -11,7 +11,7 @@
     <!-- Semantic HTML note: using article not section b/c each GitHub repo can be found independently on GitHub -->
     {{#each github.repos as | repo | }}    
       <article class="card mb-3">
-        <header class="card-header h-25">
+        <header class="card-header">
           <h1 class="card-title text-center h4 font-weight-bold">{{ repo.name }}</h1>
         </header>
         <section class="card-body">
