Feature: integrate resume and further tweaks

--- a/server/public/css/resume.css
+++ b/server/public/css/resume.css
@@ -12,7 +12,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-bottom: 0.2rem;  
 }
 
-p {
+li > p {
   margin-bottom: 0.25rem !important;
 }
 
