--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,8 +1,17 @@
 <section class="about-container inner-container">
+  <div class="d-flex justify-content-between">
   <h2 class="container-title" id="about"><i class="fas fa-user"></i> About</h2>
+  {{!-- <div class="ms-auto"> --}}
+    <a href="/resume" target="_blank" rel="noopener noreferrer" class="link">
+      <i class="fas faw fa-print"></i><span class="link-text">Resume</span>
+    </a>
+  {{!-- </div> --}}
+
+  </div>
   <p class="about card mb-3">    
     {{ basics.about }} 
   </p>
+  
 </section>
 
 <section class="projects-container inner-container">
