--- a/server/views/resume.hbs
+++ b/server/views/resume.hbs
@@ -1,40 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-  <title>
-    {{ siteName }}
-  </title>
-
-  <!-- SEO -->
-  <!-- Standard -->
-  <meta name="description" content="{{ basics.about }}">
-  <meta name="keyword" content="{{basics.keywords}}">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="{{ siteName }}">
-  <meta property="og:image" content="/img/simplenotsimpler-screenshot.png">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="{{ basics.about }}">
-  <meta property="og:url" content="https://simplenotsimpler.com">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
-
-  <!-- Although not using BS classes much, overall styling is used -->
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="/css/resume.css">
-
-  {{#if isError }}
-    <link rel="stylesheet" href="/css/error.css">
-  {{/if}}  
+  {{> head}}
 </head>
 
 <body class="body-container container-fluid">
@@ -42,9 +9,7 @@
   <header class="header-container d-flex justify-content-between">
     <div class="site-brand-container ml-2 mb-2">
       
-
       {{#if isError}}
-        
           <h1 class="logo-text text-center">
             <i class="far fa-surprise"></i>
             Oops...
@@ -53,8 +18,8 @@
 
       <div class="logo-block">
         <h1 class="logo-text">
-          {{!-- {{ github.githubName }} |  --}}
-          {{ realName}}
+           {{ realName}} 
+           {{!-- <span class="fs-4">({{ github.githubName }})</span> --}}
         </h1>  
         <h2 class="job-title">{{ basics.jobTitle }}</h2>
       </div>
@@ -70,7 +35,9 @@
       </li>
       <li>
         <i class="contact-icon fas fa-fw fa-globe"></i>
-        <span class="contact-text">{{host}}</span>
+         <a href="{{fullSite}}" target="_blank" rel="noopener noreferrer">
+          <span class="contact-text">{{host}}</span>
+        </a>
       </li>
       <!-- LinkedIn profile is public, but LinkedIn detects IP and requires login so it can force recruiters to sign in. --> 
       {{#each basics.profiles as | profile |}}
