--- a/server/views/resume.hbs
+++ b/server/views/resume.hbs
@@ -35,7 +35,7 @@
       </li>
       <li>
         <i class="contact-icon fas fa-fw fa-globe"></i>
-         <a href="{{fullSite}}" target="_blank" rel="noopener noreferrer">
+         <a href="{{website}}" target="_blank" rel="noopener noreferrer">
           <span class="contact-text">{{host}}</span>
         </a>
       </li>
