Fix: optimize image sizes

--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -27,7 +27,7 @@
     e - (end) for classes that set margin-right or padding-right in LTR, margin-left or padding-left in RTL
   -->
   <a href="/">
-    <img src="/img/sns_logo.png" width="60px" height="60px" alt="logo" aria-hidden="true" class="float-left pe-1 me-1">
+    <img src="/img/sns_logo-min.png" width="60px" height="60px" alt="logo" aria-hidden="true" class="float-left pe-1 me-1">
   </a>
   <div class="logo-block">
     <a href="/">
