--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -27,8 +27,14 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<!-- site css -->
-<link rel="stylesheet" href="/css/{{styleSheet}}">
+{{#if isResume }}
+  <!-- resume css -->
+  <link rel="stylesheet" href="/css/resume.css">
+{{ else }}
+  <!-- site css -->
+  <link rel="stylesheet" href="/css/style.css">
+{{/if}}
+
 <!-- 
   https://stackoverflow.com/questions/15463199/how-to-set-custom-favicon-in-express
   answered Apr 7 '17 at 5:58
