Chore: upgrade font awesome - version, min version, switch to cloudflare cdn

--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <!-- Although not using BS classes much, overall styling is used -->
 
