--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link href="/fonts/css/all.css" rel="stylesheet">
 
 <!-- Although not using BS classes much, overall styling is used -->
 
