--- a/server/views/resume.hbs
+++ b/server/views/resume.hbs
@@ -51,135 +51,19 @@
   </header>
 
   <main class="main-container mt-2">
-    <section class="about-container">
-      <h2 class="container-title h4" id="about"><i class="fas fa-user"></i> About</h2>
-      <p class="about">    
-        {{ basics.about }} 
-      </p>
-    </section>
+    {{> about}}
       
-    <section class="projects-container mb-3">
-      <h2 class="container-title h4" id="projects"><i class="fas fa-code-branch"></i> Projects</h2>
-     <ul class="list-group list-group-flush">
-       {{#each github.repos as | repo | }}
-        <li class="list-group-item">
-          <article>
-            <header class="h-25">
-              <h1 class="h5 fw-bold text-decoration-underline">{{ repo.name }}</h1>
-            </header>
-            <section>
-              <p class="project-description">{{ repo.description }}</p>               
-              <ul class="list-unstyled">
-                <li>
-                  <i class="fas fa-fw fa-code-branch"></i>
-                  <span class="fw-bold">GitHub:</span>
-                  <a href="{{ repo.url }}" target="_blank" rel="noreferrer noopener" class="link">
-                    <span class="link-text">{{ cleanUri repo.url }}</span></a>
-                </li>
+    {{> projects-list}}
 
-                {{#if repo.homepageUrl }}
-                <li>
-                  <i class="fas fa-fw fa-globe"></i>
-                  <span class="fw-bold">Demo:</span>
-                  <a href="{{ repo.homepageUrl }}" target="_blank" rel="noreferrer noopener" class="link">
-                    <span class="link-text">{{ cleanUri repo.homepageUrl }}</span>
-                  </a>
-                </li>
-                {{/if}}                 
-              </ul>                            
-            </section>            
-          </article>
-        </li>
-       {{/each}}
-     </ul>
-    </section>
-    <section class="skills-container">
-      <h2 class="container-title h4" id="skills"><i class="fas fa-tools"></i> Skills</h2>
-      <dl class="description-list">
-        {{#each skills as | skill | }}
-          <div>
-            <dt class="d-inline-block">
-              {{ skill.name }}:
-            </dt>
-              {{#each skill.keywords as | keyword |}}
-                <dd class="d-inline-block pipe-separator">
-                  {{ keyword }}
-                </dd>
-              {{/each}}
-          </div>
-        {{/each}}    
-      </dl>
-    </section>
+    {{> skills}}
     
     {{#if work}}
-    <section class="work-container inner-container">
-      <h2 class="container-title h4" id="work"><i class="fas fa-suitcase"></i> Work Experience</h2>
-      <div class="cards">
-        {{#each work as | workItem | }}
-          <section class="card mb-3 cards-flush">
-            <header class="company-header">
-              <h3 class="item-title company h5">
-                {{ workItem.company }}
-              </h3>
-              <p class="company-location">
-                {{ workItem.location }}
-              </p>
-            </header>
-        
-            <ul class="list-unstyled pt-1">
-              {{#each workItem.positions as | positionItem | }}
-                <li class="position">
-                  <p class="position-title">
-                    {{ positionItem.position }}
-                  </p>
-                  <p class="position-date">
-                    {{formatWorkDate positionItem.startDate }}
-                      to
-                      {{formatWorkDate positionItem.endDate }}
-                  </p>
-                </li>
-                {{/each}}
-            </ul>
-            <ul class="combined-highlights">
-              {{#each workItem.combinedHighlights as | highlight| }}
-                <li class="highlight-item">
-                  {{{ addUri highlight }}}
-                </li>
-              {{/each}} 
-            </ul>
-          </section>
-        {{/each}}    
-      </div>
-    </section>
-    {{/if}} 
+      {{> work-by-company}}
+    {{/if}}
+
     {{#if education }}
-    <section class="education-container inner-container">
-      <h2 class="container-title h4" id="education"><i class="fas fa-university"></i> Education</h2>
-      <div class="cards"> 
-        {{#each education as | educationItem |}}
-          <section class="institution-item card mb-3">
-            <header class="education-header">
-              <h3 class="item-title institution h5">
-                {{ educationItem.institution }}
-              </h3>
-              <p class="institution-location">
-                {{ educationItem.location }}
-              </p>    
-            </header>
-            <p class="degree-info pt-1">
-              {{educationItem.studyType }}
-                {{#if educationItem.area}}
-                  {{educationItem.area}}
-                {{/if}}
-            </p>
-            <p class="institution-date">
-              {{formatYear educationItem.startDate }} to {{formatYear educationItem.endDate }}
-            </p>
-          </section>
-        {{/each}}
-      </div>
-    </section>
-    {{/if}}          
+      {{> education}}
+    {{/if}}        
   </main>   
 </body>
 
