Fix: page-breaks for resume view

--- a/server/views/partials/about.hbs
+++ b/server/views/partials/about.hbs
@@ -1,4 +1,4 @@
-<section class="about-container inner-container">
+<section class="about-container {{#unless isResume}}inner-container{{/unless}}">
   <div class="d-flex justify-content-between">
   <h2 class="container-title {{#if isResume}} h4{{/if}}" id="about"><i class="fas fa-user"></i> About</h2>
   {{#unless isResume}}
