--- a/server/views/partials/education.hbs
+++ b/server/views/partials/education.hbs
@@ -1,4 +1,4 @@
-<section class="education-container inner-container">
+<section class="education-container {{#unless isResume}}inner-container{{/unless}}">
   <h2 class="container-title {{#if isResume}} h4{{/if}}" id="education"><i class="fas fa-university"></i> Education</h2>
   <div class="cards"> 
     {{#each education as | educationItem |}}
