--- a/server/views/partials/work-by-company.hbs
+++ b/server/views/partials/work-by-company.hbs
@@ -1,4 +1,4 @@
-<section class="work-container inner-container">
+<section class="work-container {{#unless isResume}}inner-container{{/unless}}">
   <h2 class="container-title {{#if isResume}} h4{{/if}}" id="work"><i class="fas fa-suitcase"></i> Work Experience</h2>
   <div class="cards">
     {{#each work as | workItem | }}
