Fix(education.hbs): layout fix - add separator between studyType & area

--- a/server/views/partials/education.hbs
+++ b/server/views/partials/education.hbs
@@ -14,7 +14,7 @@
         <p class="degree-info {{#if ../isResume}} pt-1{{/if}}">
           {{educationItem.studyType }}
             {{#if educationItem.area}}
-              {{educationItem.area}}
+              | {{educationItem.area}}
             {{/if}}
         </p>
         <p class="institution-date">
