--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -42,9 +42,9 @@
   <nav class="nav-container me-2 mb-2">
     <ul class="nav-list">
       <li>
-        <a href="#projects">
+        <a href="#repos">
           <i class="nav-icon fas fa-fw fa-code-branch"></i>
-          <span class="nav-text">Projects</span>
+          <span class="nav-text">Repos</span>
         </a>
       </li>
       <li>
