--- a/server/views/partials/repos-cards.hbs
+++ b/server/views/partials/repos-cards.hbs
@@ -1,5 +1,5 @@
-<section class="projects-container inner-container">
-  <h2 class="container-title {{#if isResume}} h4{{/if}}" id="projects"><i class="fas fa-code-branch"></i> Projects</h2>
+<section class="repos-container inner-container">
+  <h2 class="container-title {{#if isResume}} h4{{/if}}" id="repos"><i class="fas fa-code-branch"></i> repos</h2>
   <div class="cards">
     <!-- Semantic HTML note: using article not section b/c each GitHub repo can be found independently on GitHub -->
     {{#each github.repos as | repo | }}    
