--- a/server/views/partials/repos-list.hbs
+++ b/server/views/partials/repos-list.hbs
@@ -1,5 +1,5 @@
-  <section class="projects-container mb-3">
-    <h2 class="container-title h4" id="projects"><i class="fas fa-code-branch"></i> Projects</h2>
+  <section class="repos-container mb-3">
+    <h2 class="container-title h4" id="repos"><i class="fas fa-code-branch"></i> Repos</h2>
     <ul class="list-group list-group-flush">
       {{#each github.repos as | repo | }}
       <li class="list-group-item">
