--- a/server/views/resume.hbs
+++ b/server/views/resume.hbs
@@ -53,7 +53,7 @@
   <main class="main-container mt-2">
     {{> about}}
       
-    {{> projects-list}}
+    {{> repos-list}}
 
     {{> skills}}
     
